Phase1: Implement in-memory job queue with Rest API
Complete implementation of in-memory job queue with REST API, worker pool,
and clean architecture. Includes proper error
handling, security fixes, and comprehensive development tooling.

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -9,7 +9,7 @@ linters-settings:
       - default
       - prefix(github.com/mtr002/Job-Queue)
   gofumpt:
-    extra-rules: true
+    extra-rules: false
   govet:
     enable-all: true
   staticcheck:
