--- a/internal/api/BUILD
+++ b/internal/api/BUILD
@@ -2,7 +2,7 @@ load("@rules_go//go:def.bzl", "go_library")
 
 go_library(
     name = "api",
-    srcs = ["server.go"],
+    srcs = ["server.go", "router.go"],
     importpath = "github.com/mtr002/Job-Queue/internal/api",
     visibility = ["//:__subpackages__"],
 )
